<resources>
    <!--То, что переводиться не будет-->
    <string name="temperatureC">+27 С&#176;</string>
    <string name="temperatureF">60 F&#176;</string>
    <string name="TAG">WeatherActivity</string>
    <string name="TEXT">TEXT</string>
    <string name="onCreate">onCreate()</string>
    <string name="onStart">onStart()</string>
    <string name="onRestoreInstanceState">oonRestoreInstanceState()</string>
    <string name="onPause">onPause()</string>
    <string name="onSaveInstanceState">onSaveInstanceState()</string>
    <string name="onResume">onResume()</string>
    <string name="onRestart">onRestart()</string>
    <string name="onStop">onStop()</string>
    <string name="onDestroy">onDestroy()</string>
    <string name="Create_action">Create action</string>
    <string name="onViewCreated">onViewCreated()</string>
    <string name="onAttach">onAttach()</string>
    <string name="onDetach">onDetach()</string>
    <string name="maxLength">25</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="UserName">Ivan Ivanov</string>
    <string name="warning">Warning</string>
    <string name="success">success</string>
    <string name="createActionFragment">CreateActiofragment</string>

    <!--То, что потом переведем-->
    <string name="app_name">Weather</string>
    <string name="city">St. Petersburg</string>
    <string name="first_start">Fist start!</string>
    <string name="restart">Restart!</string>
    <string name="write_city">Write the city</string>
    <string name="start_new_activity">Start a new activity!</string>
    <string name="repeated_input">Enter the name of the city!</string>
    <string name="character_limit">Character limit exceeded!</string>
    <string name="nameCityKey">nameCityKey</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="done">done</string>

    <string name="temperature">Temperature</string>
    <string name="temperatureCelsius">Celsius</string>
    <string name="temperatureFahrenheit">fahrenheit</string>
    <string name="save">Save</string>
    <string name="wind">2 m/s, SW</string>
    <string name="pressure">765 mm mer</string>
    <string name="add">Add</string>
    <string name="menu_list_cities">list city</string>

    <string name="evaluate">Rate app</string>
    <string name="title_communicate">title_communicate</string>


    <!-- Хорошей практикой является заведение отдельных значений для одинаковых текстов -->
    <string name="change_city">Change city</string>
    <string name="change_city_dialog">Change city</string>
    <string name="ok">OK</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="Error_server">Ошибка сервера</string>
    <string name="Open_weather_map_app_id">ac8e27ae2dc7a85df994b9c9b6293ea8</string>
    <string name="data_uploaded">Data uploaded</string>
    <string name="by_coordinates">by coordinates</string>
    <string name="by_city_name">by city name</string>
    <string name="locating">locating</string>
    <string name="refresh">refresh</string>
</resources>
