<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_list_cities"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/menu_list_cities"
        />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings" />
    <item
        android:id="@+id/change_city"
        android:icon="@drawable/ic_add_city_black_24dp"
        android:title="@string/change_city" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="always"/>
</menu>