<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--android:checkableBehavior="single" - позволяет выделять выбранный пункт-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_24dp"
            android:title="@string/about" />
    </group>

    <!--Реализация подменю-->
    <item android:title="@string/title_communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_evaluate"
                    android:icon="@drawable/ic_star_black_24dp"
                    android:title="@string/evaluate" />
            </group>
        </menu>
    </item>
</menu>
