<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/element1"
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <TextView
            android:id="@+id/weather_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/default_padding"
            android:layout_marginStart="@dimen/default_padding"
            android:text="@string/temperature"
            android:textSize="@dimen/text_size_30" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_value">

            <RadioButton
                android:id="@+id/radioButton11"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperatureCelsius"
                android:textColor="@color/colorText"/>

            <RadioButton
                android:id="@+id/radioButton22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperatureFahrenheit"
                android:textColor="@color/colorText"/>

            <Button
                android:id="@+id/button_settings_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:hint="@string/save"
                android:maxLength="@string/maxLength" />

        </RadioGroup>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>